# behavior_rknn

./: README.md
VoiceService/: CMakeLists.txt
VoiceService/conf/: voiceService.json
VoiceService/include/: VoiceService.hpp  config.h  ftp.h  localBus.h  localVoice.h  mqttBus.h  voiceDAO.h  voicePlayer.h  voiceSynthesis.h  volumeController.h
VoiceService/include/base/: utils.h
VoiceService/src/: ftp.cpp  localBus.cpp  localVoice.cpp  main.cpp  mqttBus.cpp  voiceDAO.cpp  voicePlayer.cpp  voiceSynthesis.cpp  volumeController.cpp
behavior/: CMakeLists.txt
behavior/conf/: behavior.json  retina_driver_config.json
behavior/include/: BodyBehaviorDetector.h  CameraCapture.h  Capture.h  Detector.h  DriverBehaviorDetector.h  DriverBehaviorService.h  HeadBehaviorDetector.h  LookRightLeftDetector.h  MjpegDecoder.h  PersonHeadDetector.h  RetinaDriver.h  RtspCapture.h  RtspVideoCircleRecorder.h  UploadBehavior.h  lookLeftRightDetector.h  rknn_api.h  rockx.h
behavior/include/classifier/: behaviorClassify.h  closeEye.h  lookLeftRight.h  lookStraight.h
behavior/model/: RetinaTK_rv1126.rknn
behavior/src/: BodyBehaviorDetector.cpp  CameraCapture.cpp  Detector.cpp  DriverBehaviorDetector.cpp  DriverBehaviorService.cpp  HeadBehaviorDetector.cpp  LookRightLeftDetector.cpp  Makefile  MjpegDecoder.cpp  PersonHeadDetector.cpp  RetinaDriver.cpp  RtspCapture.cpp  RtspVideoCircleRecorder.cpp  UploadBehavior.cpp  lookLeftRightDetector.cpp  main.cpp
behavior/src/classifier/: closeEye.cpp  lookLeftRight.cpp  lookStraight.cpp
behavior_new/12B/conf/: behavior.json  retina_driver_config.json
behavior_new/12B/incluce/: HeadBehaviorDetector.h  HeadBodyDetector.h  RtspCapture.h  localBus.h  util.h
behavior_new/12B/incluce/classify/: BehaviorClassify.h  Call.h  Yawn.h
behavior_new/12B/include/: BodyBehaviorDetector.h  Detector.h  DetectorDriver.h  H264ToMp4.h  HeadBodyDetector.h  RockxDetector.h  RtspCapture.h  RtspVideoCircleRecorder.h  rockx_type.h  versionConfig.h
behavior_new/12B/include/classify/: CloseEyes.h  lookLeftRight.h  lookStraight.h
behavior_new/12B/include/modules/: face.h
behavior_new/12B/model/: 12B-yolov5n-head-body-phone.rknn  12B-yolov8n-smoke.rknn  12B_smoke.rknn  12B_smoke_cls_v8.rknn
behavior_new/12B/models/: 12B_head_body_phone_v5.rknn
behavior_new/12B/src/: BodyBehaviorDetector.cpp  Detector.cpp  DetectorDriver.cpp  DetectorService.cpp  H264ToMp4.cpp  HeadBehaviorDetector.cpp  HeadBodyDetector.cpp  RockxDetector.cpp  RtspCapture.cpp  UploadBehavior.cpp  localBus.cpp  main.cpp  util.cpp
behavior_new/12B/src/classify/: Call.cpp  Smoke.cpp  lookLeftRight.cpp
behavior_new/12B/vehicleHpp/: BehaviorConf.hpp  RetinaDriverConf.hpp
behavior_new/3399Pro/: CMakeLists.txt
behavior_new/3399Pro/include/: BlockCameraDetector.h  BodyBehaviorDetector.h  Detector.h  DetectorService.h  UploadBehavior.h  behaviorStatus.h
behavior_new/3399Pro/include/classify/: BlockCamera.h  Smoke.h
behavior_new/3399Pro/include/modules/: carplate.h  face.h  object_detection.h
behavior_new/3399Pro/models/: face_body_phone_v5.rknn  smoke_cls_v8.rknn
behavior_new/3399Pro/src/: BlockCameraDetector.cpp  BodyBehaviorDetector.cpp  Detector.cpp  DetectorDriver.cpp  H264ToMp4.cpp  HeadBehaviorDetector.cpp  HeadBodyDetector.cpp  RockxDetector.cpp  RtspCapture.cpp  RtspVideoCircleRecorder.cpp  UploadBehavior.cpp  main.cpp
behavior_new/3399Pro/src/classify/: BlockCamera.cpp  CloseEyes.cpp  Yawn.cpp  lookStraight.cpp
cpptoolkit/: CMakeLists.txt
cpptoolkit/include/: ByteBuffer.hpp  HYM8563.h  HwInfo.h  i2c.h  make_unique.h  mqtt_manage.h  pty-socket.h  ringbuffer.hpp  status.h  thread_raii.h
cpptoolkit/include/transmission/: transmission_sp.h
cpptoolkit/include/util/: calendar.h  crc24q.h  log.h
cpptoolkit/src/: ByteBuffer.cpp  H264FFmpegDecoder.cpp  H264MPPDecoder.cpp  HYM8563.cpp  HwInfo.cpp  base64.cpp  gpio.cpp  i2c.cpp  mqtt_manage.cpp  pty-socket.cpp
cpptoolkit/src/serial/impl/: unix.cc
cpptoolkit/src/serial/impl/list_ports/: list_ports_linux.cc
cpptoolkit/src/transmission/: transmission_can.cpp  transmission_sp.cpp  transmission_tcp.cpp  transmission_udp.cpp
cpptoolkit/src/util/: calendar.cpp  commons.cpp  crc24q.cc  recvbuf.cpp
libcpptoolkit/libcpptoolkit/include/: Decoder.h  H264FFmpegDecoder.h  H264MPPDecoder.h  gpio.h  led.h
libcpptoolkit/libcpptoolkit/include/transmission/: transmission.h  transmission_can.h  transmission_tcp.h  transmission_udp.h
libcpptoolkit/libcpptoolkit/include/util/: commons.h  recvbuf.h
vehicleHpp/vehicleHpp/: .cproject  .project  BehaviorConf.hpp  BleProxyConf.hpp  GlobalConf.hpp  HplocatorConf.hpp  PushMpegtsConf.hpp  PushRtmpConf.hpp  PushStreamConf.hpp  RetinaDriverConf.hpp  UVMonitorConf.hpp  VAITerminal_JTConf.hpp  VStreamRecorderConf.hpp  VehicleWebrtcClientConf.hpp  VideoHelpConf.hpp  VoiceService.hpp  canProxyConf.hpp
